# spreet.js

./: .gitignore  Cargo.toml  Makefile.toml  make.nu  tsconfig.json
.github/: ci.yml
.github/workflows/: ci.yml
e2e/: lib.test.ts
imports/: spreet_js_imports.d.ts  spreet_js_imports.js  spreet_js_imports_bg.wasm  spreet_js_imports_bg.wasm.d.ts
scripts/: postbuild.rs
src/: lib.rs  lib.ts  plugin.js  plugin.mts  plugin.ts
tests/: plugin.test.mts
