[package]
name = "esbuild-plugin-spreet"
version = "0.1.0-dev.3"
authors = ["Tim 'Piepmatz' Hesse <git+github@cptpiepmatz.de>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/cptpiepmatz/esbuild-plugin-spreet.git"

[package.metadata.jsr]
scope = "@cptpiepmatz"
exports = "./plugin.mts"
publish.include = ["plugin.mts", "esbuild_plugin_spreet.wasm", "LICENSE"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "postbuild"
path = "scripts/postbuild.rs"

[dependencies]
spreet = { version = "0.11.0", default-features = false }
oxipng = { version = "9.0", features = ["freestanding"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
static-toml = "1.3.0"

