[package]
name = "spreet-js-imports"
version = "0.1.0-dev.1"
authors = ["Tim 'Piepmatz' Hesse <git+github@cptpiepmatz.de>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/cptpiepmatz/spreet.js.git"

[package.metadata.jsr]
name = "@cptpiepmatz/spreet"
exports = "./src/lib.ts"
publish.include = ["src/lib.ts", "imports", "LICENSE"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "postbuild"
path = "scripts/postbuild.rs"
required-features = ["postbuild"]

[features]
postbuild = ["static-toml", "uu_cp"]

[dependencies]
spreet = { version = "0.11.0", default-features = false }
oxipng = { version = "9.0", features = ["freestanding"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
static-toml = { version = "1.3.0", optional = true }
wasm-bindgen = "0.2.100"
tsify-next = { version = "0.5.5", default-features = false, features = ["js"] }
thiserror = "2.0.12"
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
uu_cp = { version = "0.0.29", optional = true }
